# garmin-footprints

./: .gitignore  .pre-commit-config.yaml  .prettierignore  Implementation plan.md  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  create-invite.yml  deploy-runs-pages.yml  deploy.yml  infra-plan.yml  process-job.yml  reap-jobs.yml
apps/web/: app.js  index.html  styles.css
apps/web/browser-processing/: processor-core.js  processor-worker.js
apps/web/guide/: garmin-export.html
apps/web/test/: browser-processor.test.mjs  viewer-share-controls.test.mjs
apps/web/viewer/: app.js  index.html  styles.css
apps/worker/: wrangler.jsonc
apps/worker/migrations/: 0001_init.sql  0002_multipart_uploads.sql  0003_browser_first_publishing.sql
apps/worker/src/: index.js  testing.js
docs/: browser-first-sharing.md  deployment.md  garmin-export-guide.md
infra/: README.md
infra/bootstrap/: main.tf
infra/prod/: .terraform.lock.hcl  backend.example.hcl  main.tf  outputs.tf  variables.tf  versions.tf
processor/: __init__.py  build_visualization_data.py  process_job.py  requirements-dev.txt  requirements.txt
processor/tests/: fixtures.py  test_build_visualization_data.py
public/: app.js  index.html
scripts/: build-runs-pages.mjs  build_visualization_data.py  configure-r2-cors.mjs  create-invite-sql.mjs  local-dev-server.mjs  write-wrangler-production-config.mjs
sites/runs/: meta.json
template/: app.js  index.html  styles.css
tests/e2e/: browser-local-preview.mjs  local-flow.mjs
(+2 files in other folders)
